test/errors/parser/syntax_unexpected_rparen.ms
a = 1)
// Syntax Error (Line 1, Column 7): Expected token TOKEN_NL, instead got TOKEN_PAREN_R.
